# weatherstation-station

./: Cargo.toml  config.toml
src/: main.rs  measurement.rs  own_config.rs  queue.rs  sensor_adapter.rs  server_adapter.rs
