[package]
name = "station"
version = "0.1.0"
authors = ["David Lefarth <David.Lefarth@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
config = {version = "0.9", features = ["yaml"]}
bmp085 = "0.1.1"
i2cdev = {version = "0.3.1"}